# sec-scan

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: detect.rs  format.rs  mod.rs  scan.rs
src/domain/: detector.rs  extractor.rs  mod.rs  models.rs  service.rs
src/infrastructure/: error.rs  mod.rs
src/infrastructure/api/: mod.rs  ollama_client.rs
src/infrastructure/extractors/: docx_extractor.rs  extractor_manager.rs  mod.rs  pdf_extractor.rs  text_extractor.rs
src/infrastructure/filesystem/: mod.rs  scanner.rs
src/infrastructure/repositories/: api_detector.rs  hybrid_detector.rs  mod.rs  output_formatter.rs  regex_detector.rs
src/interfaces/: cli.rs  mod.rs
src/utils/: config.rs  metrics.rs  mod.rs  progress.rs
test_files/: sample1.txt  sample2.txt  sample3.txt  sample4.txt
