[package]
name = "personal-info-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "ファイル内の個人情報を検出するスキャナー"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
lopdf = "0.32"
pdf-extract = "0.4"
thiserror = "1"
tempfile = "3.10.0"
docx-rust = "0.1"
regex = "1.10"
mockito = "1.2"
zip = "0.6"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
